Bug 694622 - Compilation warnings
Summary: Compilation warnings
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Build Process (show other bugs)
Version: 9.10
Hardware: PC Linux
: P4 minor
Assignee: Chris Liddell (chrisl)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-29 01:01 UTC by Ilya
Modified: 2013-11-28 00:14 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ilya 2013-09-29 01:01:08 UTC
Building ghostscript-gpl-9.10 I'v got this compilation warnings:
./base/wrfont.c:76:9: warning: implicit declaration of function ‘abort’ [-Wimplicit-function-declaration]
./psi/dxmain.c:1163:5: warning: implicit declaration of function ‘gs_sprintf’ [-Wimplicit-function-declaration]
Comment 1 Chris Liddell (chrisl) 2013-11-08 08:12:38 UTC
The dxmain.c warning addressed in:

http://git.ghostscript.com/?p=ghostpdl.git;a=commitdiff;h=656f26c2


I don't get the wrfont.c warning, and I can't see how it might possibly be triggered.
Comment 2 Ilya 2013-11-28 00:14:40 UTC
(In reply to comment #1)
> 
> I don't get the wrfont.c warning, and I can't see how it might possibly be
> triggered.

Oh, my apologies, this warning arises from gentoo-specific patches for ghostscript-gpl.