Bug 694622: address a compiler warning.

Use sprintf() instead of gs_sprintf() for "top level" code.

CLUSTER_UNTESTED